--- a/pages/applicant-case-overview.html
+++ b/pages/applicant-case-overview.html
@@ -51,7 +51,7 @@
 
     <div class="container bg-dblue pt-3 pb-2 mt-5 d-flex align-items-center justify-content-center">
       <div class="d-flex flex-column">
-          <div class="d-flex justify-content-center text-light"><h4>Name of Case</h4></div>
+          <div class="d-flex justify-content-center text-light"><h4>Name of Case: <span id="caseName"></span></h4></div>
       </div>
     </div>
 
@@ -169,9 +169,32 @@
 
     <script>
       window.onload = console.log(sessionStorage);
+      window.onload = retrieveCase();
       function dashboardReturn(){
         window.location.replace("applicant-start.html")
       }
+
+      function retrieveCase(){
+        var settings = {
+          "url": "http://127.0.0.1:8100/get_cases_by_client",
+          "method": "POST",
+          "timeout": 0,
+          "headers": {
+            "Content-Type": "application/json"
+          },
+          "data": JSON.stringify({
+            "client_id": sessionStorage.getItem("userID")
+          }),
+        };
+
+        $.ajax(settings).done(function (response) {
+          console.log(response);
+          if (response.code == 200){
+            document.getElementById("caseName").innerHTML = response.data.case_title;
+          }
+        });
+      }
+
     </script>
 
   </body>
