--- a/pages/otp.html
+++ b/pages/otp.html
@@ -144,6 +144,8 @@
                 }
                 else if(userType == "studentAssistant"){
 
+                    console.log(sessionStorage);
+
                     if(loginRegister == "register"){
                         let name = sessionStorage.getItem("name");
                         let year = sessionStorage.getItem("year");
