--- a/pages/consultation-documentation.html
+++ b/pages/consultation-documentation.html
@@ -56,7 +56,7 @@
         <!-- Section: Timeline -->
         <div class="row">
     
-          <div class="col-6 col-md-6 bg-beige" style="padding: 0px;">
+          <div class="col-12 bg-beige" style="padding: 0px;">
               <h5 class="bg-dblue text-light" style="text-align:center;">Notes from Consultation</h5>
               <span class = 'bg-gold text-light m-2 px-3'>Date</span>
               <span id="case_date"></span>
@@ -93,7 +93,7 @@
           </div>
           <div class="col-1 col-md-1"></div>
           
-          <!-- Section: Timeline -->
+          <!-- Section: Timeline
           <div class="col-5 col-md-5 bg-beige p-0 position-relative">
             <h5 class="bg-gold text-light" style="text-align:center;">Google Doc links with Information</h5>
             <form class="m-2">
@@ -105,7 +105,7 @@
                 <button class="text-light m-3 px-3 bg-dblue" style="margin-bottom: 15px; border: none;" onclick="submitGLink()">Submit</button>
             </div>
 
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
