--- a/pages/SA-dashboard.html
+++ b/pages/SA-dashboard.html
@@ -171,6 +171,13 @@
                 }
             }
         }
+
+        function caseSession(caseID, saID, lawyerID){
+            sessionStorage.setItem("caseID", caseID);
+            sessionStorage.setItem("saID", saID);
+            sessionStorage.setItem("lawyerID", lawyerID);
+        }
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
